@@ -1,17 +1,18 @@
 import javassist.*;
+import sun.misc.BASE64Encoder;
 
-import java.nio.charset.StandardCharsets;
-import java.util.Base64;
 
 public class toBase64 {
     public static void main(String[] args) throws Exception{
         ClassPool aDefault = ClassPool.getDefault();
         //CtClass ctClass = aDefault.get(Valveimpl.class.getName());
-        //CtClass ctClass = aDefault.get(addValve.class.getName());
-        CtClass ctClass = aDefault.get(addMemShells.class.getName());
+        CtClass ctClass = aDefault.get(addValve.class.getName());
+        //CtClass ctClass = aDefault.get(addMemShells.class.getName());
         byte[] bytes = ctClass.toBytecode();
-        byte[] encode = Base64.getEncoder().encode(bytes);
-        System.out.println(new String(encode));
-        System.out.println((new String(Base64.getEncoder().encode("addMemShells".getBytes(StandardCharsets.UTF_8)))));
+        String encode = new BASE64Encoder().encode(bytes);
+        System.out.println(encode);
+        String bcel = com.sun.org.apache.bcel.internal.classfile.Utility.encode(bytes, true);
+        System.out.println(bcel);
+        //密码：qax36oNb
     }
 }
